create mobile navbar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/services.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
@@ -28,6 +29,7 @@
             <a href="index.html" class="active">Home</a>
             <a href="pages/about.html">About</a>
             <a href="pages/services.html">Services</a>
+            <a href="pages/portfolio.html">Portfolio</a>
             <a href="pages/contact.html">Contact</a>
         </nav>
     </header>
@@ -35,11 +37,11 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1 class="reveal">Elevate Your Brand with <span style="color: var(--primary)">Digital Excellence</span>
+                <h1>Elevate Your Brand with <span style="color: var(--primary)">Digital Excellence</span>
                 </h1>
-                <p class="reveal">We craft stunning digital experiences that drive growth, engagement, and lasting
+                <p>We craft stunning digital experiences that drive growth, engagement, and lasting
                     impact for your business.</p>
-                <div class="reveal" style="display: flex; gap: 15px; justify-content: center;">
+                <div style="display: flex; gap: 15px; justify-content: center;">
                     <a href="pages/services.html" class="btn">Explore Services</a>
                     <a href="pages/contact.html" class="btn btn-outline">Get in Touch</a>
                 </div>
@@ -47,21 +49,21 @@
         </section>
 
         <section class="section">
-            <div class="section-header reveal">
+            <div class="section-header">
                 <h2>Why Choose Us?</h2>
                 <p>We combine creativity with data-driven strategies to deliver exceptional results.</p>
             </div>
             <div class="grid">
-                <div class="card reveal">
+                <div class="card">
                     <h3>Innovative Design</h3>
                     <p>Our designs aren't just pretty; they're built to convert and represent your brand's unique voice.
                     </p>
                 </div>
-                <div class="card reveal">
+                <div class="card">
                     <h3>Strategic Growth</h3>
                     <p>We don't just post; we strategize. Every campaign is backed by data and market research.</p>
                 </div>
-                <div class="card reveal">
+                <div class="card">
                     <h3>Modern Tech</h3>
                     <p>We use the latest tools and frameworks to ensure your digital presence is fast, secure, and
                         future-proof.</p>
@@ -71,15 +73,15 @@
 
         <section class="stats-section">
             <div class="stats-grid">
-                <div class="stat-card reveal">
+                <div class="stat-card">
                     <span class="stat-number" data-target="300">0</span>
                     <p class="stat-label">Projects Delivered</p>
                 </div>
-                <div class="stat-card reveal">
+                <div class="stat-card">
                     <span class="stat-number" data-target="100">0</span>
                     <p class="stat-label">Happy Clients</p>
                 </div>
-                <div class="stat-card reveal">
+                <div class="stat-card">
                     <span class="stat-number" data-target="5">0</span>
                     <p class="stat-label">Years of Experience</p>
                 </div>
@@ -88,13 +90,13 @@
 
         <!-- services section -->
         <section class="section" id="services">
-            <div class="section-header reveal">
+            <div class="section-header">
                 <h2>Our Specialized Services</h2>
                 <p>We provide end-to-end to help your brand stand out in the digital landscape.</p>
             </div>
             <div class="service-grid">
                 <!-- digital marketing -->
-                <div class="service-card reveal">
+                <div class="service-card">
                     <div class="service-image">
                         <img src="assets/images/digital-marketing.png" alt="Digital Marketing">
                     </div>
@@ -103,7 +105,7 @@
                     </div>
                 </div>
                 <!-- Graphic Design -->
-                <div class="service-card reveal">
+                <div class="service-card">
                     <div class="service-image">
                         <img src="assets/images/graphic-design.png" alt="Graphic Design">
                     </div>
@@ -112,7 +114,7 @@
                     </div>
                 </div>
                 <!-- Product and Brand photoshoot -->
-                <div class="service-card reveal">
+                <div class="service-card">
                     <div class="service-image">
                         <img src="assets/images/photoshoot.png" alt="Product and Brand Photoshoot">
                     </div>
@@ -121,7 +123,7 @@
                     </div>
                 </div>
                 <!-- Social Media Management -->
-                <div class="service-card reveal">
+                <div class="service-card">
                     <div class="service-image">
                         <img src="assets/images/social-media.png" alt="Social Media Management">
                     </div>
@@ -130,7 +132,7 @@
                     </div>
                 </div>
                 <!-- Web Development -->
-                <div class="service-card reveal">
+                <div class="service-card">
                     <div class="service-image">
                         <img src="assets/images/web-dev.png" alt="Web Development">
                     </div>
@@ -139,7 +141,7 @@
                     </div>
                 </div>
                 <!-- Video Editing -->
-                <div class="service-card reveal">
+                <div class="service-card">
                     <div class="service-image">
                         <img src="assets/images/video-editing.png" alt="Video Editing">
                     </div>
@@ -148,18 +150,18 @@
                     </div>
                 </div>
             </div>
-            <div class="reveal" style="text-align: center; margin-top: 50px;">
+            <div style="text-align: center; margin-top: 50px;">
                 <a href="pages/services.html" class="btn btn-outline">See All Service Details</a>
             </div>
         </section>
 
         <section class="section" style="background: var(--card-bg);">
-            <div class="section-header reveal">
+            <div class="section-header">
                 <h2>Client Stories</h2>
                 <p>See how our clients have transformed with our digital marketing and creative solutions.</p>
             </div>
             <div class="grid">
-                <div class="card reveal" style="border-top: 4px solid var(--primary);">
+                <div class="card" style="border-top: 4px solid var(--primary);">
                     <p style="font-style: italic; margin-bottom: 20px;">"DotShot Digital has been a game-changer for our
                         business. Their innovative approach to digital marketing has helped us reach new heights and
                         grow
@@ -167,7 +169,7 @@
                     <strong>- Rahul Sharma</strong>
                     <p style="font-size: 0.8rem; opacity: 0.6;">CEO, Tech Innovations</p>
                 </div>
-                <div class="card reveal" style="border-top: 4px solid var(--primary);">
+                <div class="card" style="border-top: 4px solid var(--primary);">
                     <p style="font-style: italic; margin-bottom: 20px;">"The team is incredibly creative and responsive.
                         They truly understand modern digital aesthetics."</p>
                     <strong>- Priya Verma</strong>
@@ -180,11 +182,11 @@
 
     <!-- faq section -->
     <section class="section">
-        <div class="section-header reveal">
+        <div class="section-header">
             <h2> Frequently Asked Questions </h2>
             <p> Here are some of the most common questions we receive from our clients. </p>
         </div>
-        <div class="faq-container reveal" style="max-width: 800px; margin: 0 auto;">
+        <div class="faq-container" style="max-width: 800px; margin: 0 auto;">
             <details class="faq-item">
                 <summary>What services does DotShot Digital offer?</summary>
                 <div class="faq-answer">
@@ -277,6 +279,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="pages/about.html">About Us</a></li>
                     <li><a href="pages/services.html">Our Services</a></li>
+                    <li><a href="pages/portfolio.html">Portfolio</a></li>
                     <li><a href="pages/contact.html">Contact</a></li>
                 </ul>
             </div>
