--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us | DotShot Digital</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/contact.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -16,11 +18,12 @@
 
 <body>
 
+    <!-- HEADER -->
     <header>
-        <a href="index.html" class="logo">DotShot Digital </a>
-        <button class="menu-btn" id="menuBtn">
-            ☰
-        </button>
+        <a href="../index.html" class="logo"><img src="../assets/images/dotshot-logo.png"
+                alt="dotshot digital logo"></a>
+
+        <button class="menu-btn" id="menuBtn">☰</button>
 
         <nav id="navMenu">
             <a href="../index.html">Home</a>
@@ -32,14 +35,19 @@
     </header>
 
     <main>
+
+        <!-- HERO -->
         <section class="hero"
-            style="min-height: 40vh; background: linear-gradient(rgba(2, 6, 23, 0.8), rgba(2, 6, 23, 0.8)), url('https://images.unsplash.com/photo-1534536281715-e28d76689b4d?q=80&w=2070&auto=format&fit=crop'); background-size: cover; background-position: center; background-attachment: fixed;">
-            <h1>Get In <span style="color: var(--primary)">Touch</span></h1>
+            style="min-height:40vh; background:linear-gradient(rgba(2,6,23,.8),rgba(2,6,23,.8)),url('https://images.unsplash.com/photo-1534536281715-e28d76689b4d?q=80&w=2070&auto=format&fit=crop'); background-size:cover; background-position:center;">
+            <h1>Get In <span style="color:var(--primary)">Touch</span></h1>
             <p>Have a project in mind? Let's build something amazing together.</p>
         </section>
 
+        <!-- CONTACT -->
         <section class="section">
             <div class="contact-container">
+
+                <!-- INFO -->
                 <div class="contact-info">
                     <div class="info-item">
                         <div class="info-icon">📍</div>
@@ -48,6 +56,7 @@
                             <p>64, Shree Mangal Nagar, Bicholi Hapsi Road, Indore, MP – 452016</p>
                         </div>
                     </div>
+
                     <div class="info-item">
                         <div class="info-icon">📞</div>
                         <div class="info-text">
@@ -55,6 +64,7 @@
                             <p>+91 92014 23898</p>
                         </div>
                     </div>
+
                     <div class="info-item">
                         <div class="info-icon">📧</div>
                         <div class="info-text">
@@ -62,6 +72,7 @@
                             <p>dotshotdigiindore@gmail.com</p>
                         </div>
                     </div>
+
                     <div class="info-item">
                         <div class="info-icon">⏰</div>
                         <div class="info-text">
@@ -71,100 +82,98 @@
                     </div>
                 </div>
 
+                <!-- FORM -->
                 <div class="contact-form">
                     <form id="contactForm">
+
                         <div class="form-group">
                             <label for="name">Full Name</label>
                             <input type="text" id="name" placeholder="John Doe" required>
                         </div>
+
                         <div class="form-group">
-                            <label for="service">Service Needed</label>
-                            <select id="service" required>
-                                <option value="" disabled selected>Select a Service</option>
-                                <option value="Digital Marketing">Digital Marketing</option>
-                                <option value="Social Media Management">Social Media Management</option>
-                                <option value="Web Development">Web Development</option>
-                                <option value="Graphic Design">Graphic Design</option>
-                                <option value="Product & Brand Photoshoot">Product & Brand Photoshoot</option>
-                                <option value="Video Editing">Video Editing</option>
-                            </select>
+                            <label>Service Needed</label>
+                            <div class="service-checkboxes">
+                                <label><input type="checkbox" name="services" value="Digital Marketing"> Digital
+                                    Marketing</label>
+                                <label><input type="checkbox" name="services" value="Social Media Management"> Social
+                                    Media Management</label>
+                                <label><input type="checkbox" name="services" value="Web Development"> Web
+                                    Development</label>
+                                <label><input type="checkbox" name="services" value="Graphic Design"> Graphic
+                                    Design</label>
+                                <label><input type="checkbox" name="services" value="Product & Brand Photoshoot">
+                                    Product & Brand Photoshoot</label>
+                                <label><input type="checkbox" name="services" value="Video Editing"> Video
+                                    Editing</label>
+                            </div>
                         </div>
+
                         <div class="form-group">
                             <label for="message">Message</label>
                             <input type="text" id="message" placeholder="Tell us about your project..." required>
                         </div>
+
                         <button type="submit" class="btn"
-                            style="width: 100%; background: #25D366; border: none; display: flex; align-items: center; justify-content: center; gap: 10px;">
+                            style="width:100%; background:#25D366; border:none; display:flex; align-items:center; justify-content:center; gap:10px;">
                             <span>Send via WhatsApp</span>
-                            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                                <path
-                                    d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.438 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z" />
-                            </svg>
                         </button>
+
                     </form>
                 </div>
+
             </div>
         </section>
 
     </main>
 
+    <!-- FOOTER -->
     <footer>
         <div class="footer-content">
             <div class="footer-brand">
                 <h3>DotShot Digital</h3>
                 <p>Your partner in digital transformation and creative excellence.</p>
             </div>
-            <div class="footer-links">
-                <h4>Quick Links</h4>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Our Services</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-            <div class="footer-links">
-                <h4>Services</h4>
-                <ul>
-                    <li><a href="services.html">Web Development</a></li>
-                    <li><a href="services.html">Digital Marketing</a></li>
-                    <li><a href="services.html">Graphic Design</a></li>
-                    <li><a href="services.html">Video Editing</a></li>
-                </ul>
-            </div>
         </div>
+
         <div class="footer-bottom">
             <p>© 2026 DotShot Digital. All rights reserved. | Indore, MP</p>
         </div>
     </footer>
 
+    <!-- JS -->
     <script src="../js/main.js"></script>
+
     <script>
-        document.getElementById('contactForm').addEventListener('submit', (e) => {
+        document.getElementById('contactForm').addEventListener('submit', function (e) {
             e.preventDefault();
 
             const name = document.getElementById('name').value;
-            const service = document.getElementById('service').value;
             const message = document.getElementById('message').value;
 
-            // Your WhatsApp Number (with country code, no +)
+            const selectedServices = Array.from(
+                document.querySelectorAll('input[name="services"]:checked')
+            ).map(cb => cb.value);
+
+            if (selectedServices.length === 0) {
+                alert("Please select at least one service.");
+                return;
+            }
+
+            const services = selectedServices.join(', ');
             const phoneNumber = "919201423898";
 
-            // Construct the message
-            const text = `*New Inquiry from DotShot Digital*%0A%0A` +
+            const text =
+                `*New Inquiry from DotShot Digital*%0A%0A` +
                 `*Name:* ${name}%0A` +
-                `*Service:* ${service}%0A` +
+                `*Services:* ${services}%0A` +
                 `*Message:* ${message}`;
 
-            // Open WhatsApp
-            const whatsappUrl = `https://wa.me/${phoneNumber}?text=${text}`;
-            window.open(whatsappUrl, '_blank').focus();
-
-            // Reset form
+            window.open(`https://wa.me/${phoneNumber}?text=${text}`, '_blank');
             e.target.reset();
         });
     </script>
+
 </body>
 
 </html>
