--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -105,7 +105,8 @@
 <body class="bg-[#020617] text-slate-100 selection:bg-orange-500/30">
 
     <header>
-        <a href="index.html" class="logo">DotShot Digital </a>
+        <a href="../index.html" class="logo"><img src="../assets/images/dotshot-logo.png"
+                alt="dotshot digital logo"></a>
         <button class="menu-btn" id="menuBtn">
             ☰
         </button>
@@ -278,6 +279,37 @@
                     </div>
                 </div>
 
+                <!-- Video Editing 5 -->
+                <div class="portfolio-item" data-category="video">
+                    <div class="glass-card rounded-2xl overflow-hidden h-full flex flex-col">
+                        <div class="instagram-wrapper">
+                            <blockquote class="instagram-media" data-instgrm-captioned
+                                data-instgrm-permalink="https://www.instagram.com/reel/DTU_8odjUEx/?utm_source=ig_embed&amp;utm_campaign=loading"
+                                data-instgrm-version="14">
+                                <a href="https://www.instagram.com/reel/DTU_8odjUEx/">View Reel</a>
+                            </blockquote>
+                        </div>
+                        <div class="p-6 flex-grow">
+                            <h3 class="text-xl font-bold">settleezy.berlin</h3>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Video Editing 6 -->
+                <div class="portfolio-item" data-category="video">
+                    <div class="glass-card rounded-2xl overflow-hidden h-full flex flex-col">
+                        <div class="instagram-wrapper">
+                            <blockquote class="instagram-media" data-instgrm-captioned
+                                data-instgrm-permalink="https://www.instagram.com/reel/DTP_FlIDXrZ/?utm_source=ig_embed&amp;utm_campaign=loading"
+                                data-instgrm-version="14">
+                                <a href="https://www.instagram.com/reel/DTP_FlIDXrZ/">View Reel</a>
+                            </blockquote>
+                        </div>
+                        <div class="p-6 flex-grow">
+                            <h3 class="text-xl font-bold">settleezy.berlin</h3>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
