--- a/pages/services.html
+++ b/pages/services.html
@@ -17,7 +17,8 @@
 <body>
 
     <header>
-        <a href="index.html" class="logo">DotShot Digital </a>
+        <a href="../index.html" class="logo"><img src="../assets/images/dotshot-logo.png"
+                alt="dotshot digital logo"></a>
         <button class="menu-btn" id="menuBtn">
             ☰
         </button>
