--- a/pages/about.html
+++ b/pages/about.html
@@ -116,7 +116,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-brand">
-                <h3>DotShot Digital</h3>
+                <img src="../assets/images/dotshot-logo.png" alt="dotshot logo">
                 <p>Your partner in digital transformation and creative excellence.</p>
             </div>
             <div class="footer-links">
