--- a/pages/contact.html
+++ b/pages/contact.html
@@ -131,11 +131,29 @@
     <footer>
         <div class="footer-content">
             <div class="footer-brand">
-                <h3>DotShot Digital</h3>
+                <img src="../assets/images/dotshot-logo.png" alt="dotshot logo">
                 <p>Your partner in digital transformation and creative excellence.</p>
             </div>
+            <div class="footer-links">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="services.html">Our Services</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h4>Services</h4>
+                <ul>
+                    <li><a href="services.html">Web Development</a></li>
+                    <li><a href="services.html">Digital Marketing</a></li>
+                    <li><a href="services.html">Graphic Design</a></li>
+                    <li><a href="services.html">Video Editing</a></li>
+                </ul>
+            </div>
         </div>
-
         <div class="footer-bottom">
             <p>© 2026 DotShot Digital. All rights reserved. | Indore, MP</p>
         </div>
