--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -331,7 +331,7 @@
     <footer class="border-t border-white/5">
         <div class="footer-content">
             <div class="footer-brand">
-                <h3>DotShot Digital</h3>
+                <img src="../assets/images/dotshot-logo.png" alt="dotshot logo">
                 <p>Redefining digital excellence through innovation and design.</p>
             </div>
             <div class="footer-links">
